Restructured files / folders. Got bulk update working

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="Web site created using create-react-app" />
   <meta name="viewport" content="initial-scale=1, width=device-width" />
 
-  <title>LED Controller</title>
+  <title>Led Controller</title>
 </head>
 
 <body>
